added config and config.dist.js

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/brain-0.6.3.js"></script>
 
     <!-- Hooru -->
+    <script src="js/config.js"></script>
     <script src="js/hooru.js"></script>
 
     <!-- your app's js -->
