--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,10 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/write.js"></script>
+    <script src="js/calc.js"></script>
+    <script src="js/result.js"></script>
 </head>
 
 <body ng-app="starter">
