finished implementation of Hooru Provider

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,9 @@
     <script src="js/write.js"></script>
     <script src="js/calc.js"></script>
     <script src="js/result.js"></script>
+
+    <!-- Allow requests to foo.com -->
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' hooru.sauer-medientechnik.de 'unsafe-inline' 'unsafe-eval'">
 </head>
 
 <body ng-app="starter">
